# LiveTiming-Backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
data-loader/: Dockerfile  data_loader.py  fetch-mq.py
src/: __init__.py  config.py  consumer.py  main.py
src/api/routes/v1/: __init__.py  rest.py  websocket.py
src/models/: schemas.py
src/services/: rabbitmq_service.py  redis-service.py  redis_service.py
tests/: test_api.py
